Bug-fix para altura de modal carrinho, overlapped de footer e target de link em nova página

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
 .footer {
   width: 100%;
   height: 4.5rem;
-  position: absolute;
+  position: static;
   bottom: 0;
   display: flex;
   justify-content: space-between;
